politicas/10.1.k8srequirepdb-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirepdb
spec:
  crd:
    spec:
      names:
        kind: K8sRequirePDB
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirepdb

        violation[{"msg": msg}] {
          input.review.kind.kind == "Deployment"
          contains(input.review.object.metadata.namespace, "prod")
          not data.inventory.namespace[input.review.object.metadata.namespace]["poddisruptionbudgets"]
          msg := sprintf("El namespace '%s' no tiene PodDisruptionBudget configurado", [input.review.object.metadata.namespace])
        }
