politicas/10.2.k8srequirepdb.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequirePDB
metadata:
  name: require-pdb-prod
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
