politicas/4.1.k8sprivilegedcontainers-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sprivilegedcontainers
spec:
  crd:
    spec:
      names:
        kind: K8sPrivilegedContainers
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sprivilegedcontainers

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := sprintf("El contenedor '%s' está ejecutándose en modo privilegiado", [container.name])
        }
