politicas/7.2.k8ssecuritycontext.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sSecurityContext
metadata:
  name: validate-securitycontext
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
